cmake_minimum_required(VERSION 2.8)
project( ta )
# find_package(wxWidgets COMPONENTS core net base REQUIRED)
find_package(OpenCV REQUIRED)
find_package( PkgConfig REQUIRED)
pkg_search_module( TESSERACT REQUIRED tesseract )
pkg_search_module( LEPTONICA REQUIRED lept )
include_directories( ${TESSERACT_INCLUDE_DIRS} )
include_directories( ${LEPTONICA_INCLUDE_DIRS} )
link_directories( ${TESSERACT_LIBRARY_DIRS} )
link_directories( ${LEPTONICA_LIBRARY_DIRS} )
# include("${wxWidgets_USE_FILE}")
include_directories(${OpenCV_INCLUDE_DIR})
add_executable( ta ta.cpp )
# target_link_libraries(${PROJECT_NAME} ${wxWidgets_LIBRARIES} ${OpenCV_LIBS} ${LEPTONICA_LIBRARIES} ${TESSERACT_LIBRARIES})
target_link_libraries(${PROJECT_NAME} ${wxWidgets_LIBRARIES} ${OpenCV_LIBS} ${LEPTONICA_LIBRARIES} ${TESSERACT_LIBRARIES})
